--- a/golem/src/styles/layout/_sidebar.scss
+++ b/golem/src/styles/layout/_sidebar.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    animation: moveInLeft-1 1.5s ease-out;
 }
 
 .golem-sidenav {
