--- a/golem/src/styles/views/_login.scss
+++ b/golem/src/styles/views/_login.scss
@@ -50,7 +50,7 @@
     font-size: 300%;
     font-weight: 400;
     letter-spacing: 3rem;
-    animation: moveInLeft 1.5s ease-out;
+    animation: moveInLeft-2 1.5s ease-out;
 }
 
 .golem-heading-primary-sub {
